--- a/package.json
+++ b/package.json
@@ -3,16 +3,27 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon -e html,js,css ./bin/www",
+    "test": "mocha"
   },
   "dependencies": {
+    "bluebird": "^2.9.34",
     "body-parser": "~1.13.2",
     "bootstrap": "^3.3.5",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
+    "mongoose": "^4.1.2",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "supertest": "^1.0.1"
+  },
+  "devDependencies": {
+    "chai": "^3.2.0",
+    "chai-as-promised": "^5.1.0",
+    "chai-things": "^0.2.0",
+    "mocha": "^2.2.5",
+    "supertest-promised": "^0.1.0"
   }
 }
