--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "export BUFFR_DB=buffr; nodemon -e html,js,css ./bin/www",
-    "test": "export BUFFR_DB=buffrtest; mocha"
+    "test": "export BUFFR_DB=buffrtest; nodemon ./node_modules/.bin/mocha"
   },
   "dependencies": {
     "bluebird": "^2.9.34",
