add buffer things

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "mongoose": "^4.1.2",
+    "mongoose-deep-populate": "^2.0.0",
     "morgan": "~1.6.1",
     "periodic-table": "0.0.1",
     "serve-favicon": "~2.3.0",
