--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "export BUFFR_DB=buffr; nodemon -e html,js,scss ./bin/www",
+    "develop": "export BUFFR_DB=buffr; gulp develop",
+    "start": "export BUFFR_DB=buffr; gulp develop",
     "test": "export BUFFR_DB=buffrtest; nodemon ./node_modules/.bin/mocha"
   },
   "dependencies": {
@@ -26,6 +27,20 @@
     "chai": "^3.2.0",
     "chai-as-promised": "^5.1.0",
     "chai-things": "^0.2.0",
+    "del": "^1.2.1",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^2.3.1",
+    "gulp-cache": "^0.2.10",
+    "gulp-concat": "^2.6.0",
+    "gulp-imagemin": "^2.3.0",
+    "gulp-jshint": "^1.11.2",
+    "gulp-livereload": "^3.8.0",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-nodemon": "^2.0.4",
+    "gulp-notify": "^2.2.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-ruby-sass": "^1.4.0",
+    "gulp-uglify": "^1.3.0",
     "mocha": "^2.2.5",
     "supertest-promised": "^0.1.0"
   }
