--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "tests"
   ],
   "dependencies": {
-    "angular-ui-router": "~0.2.15"
+    "angular-ui-router": "~0.2.15",
+    "jquery-ui": "~1.11.4"
   }
 }
