--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,8 @@
   ],
   "dependencies": {
     "angular-ui-router": "~0.2.15",
+    "bootstrap": "~3.3.5",
+    "flat-ui": "~2.2.2",
     "jquery-ui": "~1.11.4"
   }
 }
